refactor(core): align controller tests with service layer and security